--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <p>Post Form</p>
-<form action="<%= posts_path %>">
+<form action="<%= posts_path %>" method="POST">
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
 
