--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <p>Post Form</p>
-<form action="<%= posts_path %>" method="POST">
+<%= form_tag posts_path do %>
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
 
@@ -9,4 +9,4 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <input type="submit" value="Submit Post">
 </form>
-<%= params.inspect %>
+<% end %>
