automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
   <label>Post title:</label><br>
   <%= text_field_tag :'post[title]' %> <br>
   <label>Post description:</label><br>
-  <textarea id="post_description" name="post[description]"></textarea><br>
+  <%= text_field_tag :'post[description]' %><br>
 
   <input type="submit" value="Submit Post">
 </form>
