automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,6 +5,6 @@
   <label>Post description:</label><br>
   <%= text_field_tag :'post[description]' %><br>
 
-  <input type="submit" value="Submit Post">
+  <%= submit_tag "Submit Post" %>
 </form>
 <% end %>
