--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
   <label>Post title:</label><br>
   <%= text_field_tag :'post[title]' %> <br>
   <label>Post description:</label><br>
-  <%= text_field_tag :'post[description]' %><br>
+  <%= text_area_tag :'post[description]' %><br>
 
   <%= submit_tag "Submit Post" %>
 </form>
